# AI-Powered-Real-Time-Voice-Intelligence-Platform

./: .gitignore  CLAUDE.md  FRONTEND_REDESIGN.md  PROJECT_GUIDE.md  README.md  TECH_STACK.md  docker-compose.yml  package-lock.json
backend/: .env  .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_email_verification.py  0003_session_meta.py  0004_focus_violations.py  0005_invitations.py  0006_question_set_resume.py  0007_phase1_ai_layer.py  0008_invite_starts_at.py
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  evaluator.py  feedback.py  planner.py  question.py  researcher.py  verifier.py
backend/app/auth/: google.py  routes.py
backend/app/core/: config.py  database.py  dependencies.py  email.py  llm_provider.py  logging.py  redis_client.py  security.py  storage.py
backend/app/interviews/: agent.py  orchestrator.py  routes.py  stt.py  tts.py  websocket.py
backend/app/invites/: question_sets.py  routes.py  service.py
backend/app/models/: __init__.py  email_verification_token.py  interview_invite.py  interview_template.py  password_reset_token.py  question_set.py  report.py  resume.py  session.py  turn.py  user.py
backend/app/reports/: generator.py
backend/app/resumes/: parser.py  routes.py
backend/app/schemas/: auth.py  invite.py  resume.py  session.py
backend/app/scoring/: aggregator.py
backend/app/skill_graphs/: __init__.py  backend_engineer.json  data_scientist.json  default.json  frontend_engineer.json  (+2 more)
backend/mock_interview_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_aggregator.py  test_aggregator_v2.py  test_difficulty.py  test_evaluator.py  test_invite_service.py  test_jwt_safety.py  test_orchestrator_helpers.py  test_question_set_scrub.py  test_resume_sanitizer.py  test_security.py  test_skill_graph.py
(+95 files in other folders)
